update to shallow tensorflow

--- a/shallow_tensorflow_answer.ipynb
+++ b/shallow_tensorflow_answer.ipynb
@@ -3,8 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "28bd451f-2b86-42dc-97f3-79553a06e4b8",
+      "display_name": "'Python Interactive'"
     },
     "colab": {
       "name": "shallow-tensorflow-answer.ipynb",
@@ -79,7 +79,7 @@
         "    return X, Y\n",
         "\n"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,16 +103,18 @@
         "colab": {}
       },
       "source": [
-        "learning_rate = 10\n",
+        "learning_rate = 5\n",
         "nb_iterations = 5000\n",
         "num_data=500 #number of data points\n",
+        "X,Y=load_dataset(num_data)\n",
+        "\n",
         "#X_data,Y_data=load_dataset(num_data)# load data\n",
         "# Network Parameters\n",
         "n_h = 4 # number of neurons in hidden layer\n",
-        "n_x = X_data.shape[1] #number of neurons in input\n",
-        "n_y = Y_data.shape[1] #number of neurons in ouput\n"
+        "n_x = X.shape[1] #number of neurons in input\n",
+        "n_y = Y.shape[1] #number of neurons in ouput\n"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,11 +148,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bdbc13ec-7ed3-465e-a9a9-73f6cfd07813"
+        "outputId": "bdbc13ec-7ed3-465e-a9a9-73f6cfd07813",
+        "tags": []
       },
       "source": [
         "\n",
-        "initializer = tf.initializers.glorot_uniform()\n",
+        "initializer = tf.initializers.RandomNormal()\n",
         "\n",
         "#W1=tf.Variable(tf.random.normal([n_x,n_h]),dtype='float32')#Weights of the first layer\n",
         "W1=tf.Variable(initializer([n_x,n_h]),trainable=True,dtype=tf.float32)\n",
@@ -161,16 +164,8 @@
         "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n",
         "print(n_y)"
       ],
-      "execution_count": 149,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -199,7 +194,7 @@
         "    out_layer = tf.matmul(tf.sigmoid(layer_1), W2) + b2\n",
         "    return out_layer"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,13 +217,12 @@
         "colab": {}
       },
       "source": [
-        "X,Y=load_dataset(500)\n",
         "\n",
         "# Define loss and optimize\n",
         "def loss(pred,label):\n",
         "   return tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=pred, labels=label))\n"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,11 +244,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "3bb9bad6-ee61-43d3-9cc5-cf520e64efc6"
+        "outputId": "3bb9bad6-ee61-43d3-9cc5-cf520e64efc6",
+        "tags": []
       },
       "source": [
         "# Initializing the variables\n",
-        "optimizer=tf.optimizers.SGD(10)\n",
+        "optimizer=tf.optimizers.SGD(learning_rate)\n",
         "def train(model,input,output):\n",
         "  with tf.GradientTape() as tape:\n",
         "    diff=loss(model(X),Y)\n",
@@ -277,119 +272,8 @@
         "accuracy=100*float(np.squeeze(correct))/float(Y.shape[0])\n",
         "print(\"Accuracy=\"+str(accuracy))\n"
       ],
-      "execution_count": 152,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tf.Tensor(0.7982348, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.7982348, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.8112121, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2727505, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.24509008, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2329626, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.22663277, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.22244875, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21942827, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21714225, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21535343, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21387869, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21254776, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21137862, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.21038045, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20949772, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20869692, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20796372, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20729032, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20667076, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20609923, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2055704, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20507935, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20462158, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20419313, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2037907, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20341118, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20305225, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20271155, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20238744, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20207833, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20178269, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2014995, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2012277, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20096637, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20071492, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20047255, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.20023875, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.2000131, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19979532, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19958511, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19938254, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19918796, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19900222, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.198827, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19866495, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1985196, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19839288, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1982819, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19817999, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19808196, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19798602, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19789179, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19779915, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19770798, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19761825, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19752984, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19744265, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1973567, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19727191, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19718818, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1971055, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19702384, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19694309, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19686326, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1967843, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19670618, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19662882, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1965523, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19647649, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19640143, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19632703, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19625328, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19618025, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19610779, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19603595, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1959647, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19589402, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19582391, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19575433, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19568527, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19561675, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19554873, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19548115, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19541408, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19534744, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1952813, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19521558, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1951503, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19508545, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19502102, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19495699, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19489338, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19483013, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.1947673, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19470485, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19464278, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19458108, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19451971, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19445877, shape=(), dtype=float32)\n",
-            "tf.Tensor(0.19439813, shape=(), dtype=float32)\n",
-            "[[236.]]\n",
-            "[[231.]]\n",
-            "Accuracy=93.4\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -401,7 +285,7 @@
       "source": [
         ""
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     }
   ]
