--- a/shallow_tensorflow_answer.ipynb
+++ b/shallow_tensorflow_answer.ipynb
@@ -3,8 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "name": "28bd451f-2b86-42dc-97f3-79553a06e4b8",
-      "display_name": "'Python Interactive'"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "colab": {
       "name": "shallow-tensorflow-answer.ipynb",
@@ -79,7 +79,7 @@
         "    return X, Y\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -104,7 +104,7 @@
       },
       "source": [
         "learning_rate = 5\n",
-        "nb_iterations = 5000\n",
+        "nb_iterations = 10000\n",
         "num_data=500 #number of data points\n",
         "X,Y=load_dataset(num_data)\n",
         "\n",
@@ -114,7 +114,7 @@
         "n_x = X.shape[1] #number of neurons in input\n",
         "n_y = Y.shape[1] #number of neurons in ouput\n"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -144,12 +144,12 @@
       "metadata": {
         "id": "MY46Q5c38pch",
         "colab_type": "code",
+        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bdbc13ec-7ed3-465e-a9a9-73f6cfd07813",
-        "tags": []
+        "outputId": "7d418031-b813-4495-8846-6f6342bacbc1"
       },
       "source": [
         "\n",
@@ -164,8 +164,16 @@
         "b2=tf.Variable(tf.zeros([n_y]))            #biases of the second layer\n",
         "print(n_y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -194,7 +202,7 @@
         "    out_layer = tf.matmul(tf.sigmoid(layer_1), W2) + b2\n",
         "    return out_layer"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -222,7 +230,7 @@
         "def loss(pred,label):\n",
         "   return tf.reduce_mean(tf.nn.sigmoid_cross_entropy_with_logits(logits=pred, labels=label))\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -240,12 +248,12 @@
       "metadata": {
         "id": "v3bNNi0M8pdS",
         "colab_type": "code",
+        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 953
         },
-        "outputId": "3bb9bad6-ee61-43d3-9cc5-cf520e64efc6",
-        "tags": []
+        "outputId": "a9735e52-56c6-4173-d413-f60a6f2b3712"
       },
       "source": [
         "# Initializing the variables\n",
@@ -257,7 +265,7 @@
         "  optimizer.apply_gradients( zip( grad , [W1,W2,b1,b2] ) )\n",
         "print(loss(model(X),Y))\n",
         "\n",
-        "for i in range(10000):\n",
+        "for i in range(nb_iterations):\n",
         " if(i%100==0):\n",
         "   print(loss(model(X),Y))\n",
         " train(model,X,Y)\n",
@@ -272,8 +280,69 @@
         "accuracy=100*float(np.squeeze(correct))/float(Y.shape[0])\n",
         "print(\"Accuracy=\"+str(accuracy))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(0.20173787, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20173787, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20168002, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20162262, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20156567, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20150912, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20145299, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20139724, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20134188, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20128693, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20123228, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20117801, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20112401, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20107035, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20101704, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20096399, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20091121, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20085873, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20080648, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.2007545, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.2007027, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20065114, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20059974, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20054856, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.2004975, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20044655, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20039578, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20034511, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20029451, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20024401, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.2001935, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20014304, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20009257, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.20004202, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19999143, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19994077, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19988993, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19983892, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19978765, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19973609, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.1996842, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19963188, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.199579, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19952548, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19947119, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.199416, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19935967, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19930196, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19924255, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.19918106, shape=(), dtype=float32)\n",
+            "tf.Tensor(0.1991169, shape=(), dtype=float32)\n",
+            "[[236.]]\n",
+            "[[229.]]\n",
+            "Accuracy=93.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -285,7 +354,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
