--- a/keras.ipynb
+++ b/keras.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdfzYfog6NhMes6RAX6zDf",
+      "authorship_tag": "ABX9TyPXB/caij3E1/xvrh40yusc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,8 +53,8 @@
         "colab": {}
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')"
       ],
       "execution_count": null,
       "outputs": []
@@ -68,10 +68,7 @@
       },
       "source": [
         "def load_dataset():\n",
-        "    with gzip.open(\"/content/drive/My Drive/mnist.pkl.gz\") as f:\n",
-        "        data=pickle._Unpickler(f)\n",
-        "        data.encoding='latin1'\n",
-        "        tr,_,te=data.load()\n",
+        "    tr,te=keras.datasets.mnist.load_data()\n",
         "    X=tr[0]\n",
         "    Y=tr[1]\n",
         "    X=X.T\n",
@@ -120,8 +117,7 @@
         "#(X, Y), (test_data, test_labels) = keras.datasets.mnist.load_data()\n",
         "print(X.shape)\n",
         "print(Y.shape)\n",
-        "print(a.shape)\n",
-        "print(b.shape)\n",
+        "\n",
         "X=X.T\n",
         "Y=Y.T\n",
         "test_data=test_data.T\n",
@@ -130,7 +126,7 @@
         "Y=Y.astype(\"float32\")\n",
         "test_labels=test_labels.astype(\"float32\")\n",
         "\n",
-        "X= X.reshape(50000, 784).astype(\"float32\") / 255\n",
+        "X= X.reshape(60000, 784).astype(\"float32\") / 255\n",
         "test_data = test_data.reshape(10000, 784).astype(\"float32\") / 255\n"
       ],
       "execution_count": null,
