--- a/mnist-multilayer.ipynb
+++ b/mnist-multilayer.ipynb
@@ -58,9 +58,12 @@
         "import matplotlib.pyplot as plt\n",
         "import random\n",
         "import gzip\n",
-        "import pickle"
+        "import pickle\n",
+        "import tensorflow as tf\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +86,7 @@
       "source": [
         "%matplotlib inline"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,26 +94,14 @@
       "metadata": {
         "id": "l_ysbGnUdJOE",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "7a1145e3-0831-4d14-9a63-d3d5938e7c95"
+        "colab": {}
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')"
       ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -132,7 +123,7 @@
       "source": [
         ""
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,11 +135,14 @@
       },
       "source": [
         "def load_dataset():\n",
-        "    with gzip.open(\"/content/drive/My Drive/mnist.pkl.gz\") as f:\n",
-        "        data=pickle._Unpickler(f)\n",
-        "        data.encoding='latin1'\n",
-        "        tr,_,te=data.load()\n",
-        "    X=tr[0]\n",
+        "    #with gzip.open(\"/content/drive/My Drive/mnist.pkl.gz\") as f:\n",
+        "    #    data=pickle._Unpickler(f)\n",
+        "    #    data.encoding='latin1'\n",
+        "    #    tr,_,te=data.load()\n",
+        "    tr,te=keras.datasets.mnist.load_data()\n",
+        "    print(tr[0].shape)\n",
+        "    print(te[0].shape)\n",
+        "    X=tr[0].reshape(60000,784)\n",
         "    Y=tr[1]\n",
         "    X=X.T\n",
         "    Y=Y.reshape(1,len(Y))\n",
@@ -157,13 +151,13 @@
         "        V[Y[0,j],j]=1\n",
         "        \n",
         "    Y=V\n",
-        "    test_data=te[0]\n",
+        "    test_data=te[0].reshape(10000,784)\n",
         "    test_labels=te[1]\n",
         "    test_data=test_data.T\n",
         "    test_labels=test_labels.reshape(1,len(test_labels))\n",
-        "    return X,Y,test_data,test_labels\n"
+        "    return X.astype(\"float32\")/255,Y.astype(\"float32\"),test_data.astype(\"float32\")/255,test_labels.astype(\"float32\")\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +182,7 @@
         "    s = 1/(1+np.exp(-x))\n",
         "    return s"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +227,7 @@
         "            plt.imshow(img,cmap='gray_r')\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -263,7 +257,7 @@
         "            count=count+1\n",
         "    return count"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -308,7 +302,7 @@
         "    \n",
         "    return cost,count\n"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -341,7 +335,7 @@
         "\n",
         "    return biases,weights\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -373,7 +367,7 @@
         "\n",
         "    return As"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -404,7 +398,7 @@
         "    \n",
         "    return gradb,gradw"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -424,7 +418,7 @@
         "\n",
         "    return biases,weights"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +441,7 @@
       "source": [
         ""
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -463,10 +457,9 @@
         "    #n_x=X.shape[0]\n",
         "    #n_y=Y.shape[0]\n",
         "    biases,weights=initialize_parameters(width)\n",
-        "\n",
+        "    \n",
         "    for i in range(0, num_iterations):\n",
         "        cost,count = compute_cost(Y,biases,weights)\n",
-        "       \n",
         "        for k in range(0,X.shape[1],batch_size):\n",
         "            idx=[random.randint(0,Y.shape[1]-1) for s in range(batch_size)]\n",
         "            yb=Y[:,idx]\n",
@@ -482,7 +475,7 @@
         "            print(\"test count after iteration %i is %i\" %(i,count_test))\n",
         "    return biases,weights"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,18 +484,14 @@
         "tags": [],
         "id": "TnZzq_kRdCRw",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 207
-        },
-        "outputId": "04cb500d-fc39-469d-dda6-1e2953377706"
+        "colab": {}
       },
       "source": [
         "X, Y,test_data,test_labels = load_dataset()\n",
         "n_x=X.shape[0]\n",
         "n_y=Y.shape[0]\n",
         "width=[n_x,128,64,n_y]\n",
-        "biases,weights= GD(X, Y,test_data,width,batch_size=10,learning_rate=3,\n",
+        "biases,weights= GD(X, Y,test_data,width,batch_size=64,learning_rate=3,\n",
         "                num_iterations =10, print_cost=True)\n",
         "\n",
         "\n",
@@ -512,25 +501,7 @@
         "print(len(A))\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "size 128,784\n",
-            "size 64,128\n",
-            "size 10,64\n",
-            "3\n",
-            "Cost after iteration 0: 23.267695\n",
-            "count after iteration 0 is 5224\n",
-            "test count after iteration 0 is 7517\n",
-            "3\n",
-            "Cost after iteration 1: 1.405753\n",
-            "count after iteration 1 is 37648\n",
-            "test count after iteration 1 is 8764\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -547,29 +518,13 @@
       "metadata": {
         "id": "qM9byvUDdCR2",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        },
-        "outputId": "57d335bd-4f35-47b1-8c25-46e75b7bfdfb"
+        "colab": {}
       },
       "source": [
         "print_misclassified(test_data,test_labels,biases,weights)\n"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-bdef9d553d29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint_misclassified\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_labels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbiases\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'test_data' is not defined"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
