--- a/keras-multilayer.ipynb
+++ b/keras-multilayer.ipynb
@@ -39,7 +39,7 @@
         "from tensorflow import keras\n",
         "from tensorflow.keras import layers"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -53,7 +53,7 @@
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -65,23 +65,24 @@
       },
       "source": [
         "def load_dataset():\n",
+        "  # tensorflow assumes the input and output are row vectors\n",
+        "  # where as in our implementation we use them as column vectors\n",
         "    tr,te=keras.datasets.mnist.load_data()\n",
-        "    X=tr[0]\n",
+        "    X=tr[0].astype(\"float32\")/255\n",
         "    Y=tr[1]\n",
-        "    X=X.T\n",
+        "    #X=X.T\n",
         "    Y=Y.reshape(1,len(Y))\n",
         "    V=np.zeros((10,Y.shape[1]))\n",
         "    for j in range(Y.shape[1]):\n",
         "        V[Y[0,j],j]=1\n",
         "        \n",
-        "    Y=V\n",
-        "    test_data=te[0]\n",
-        "    test_labels=te[1]\n",
-        "    test_data=test_data.T\n",
+        "    Y=V.astype(\"float32\")\n",
+        "    test_data=te[0].astype(\"float32\")/255\n",
+        "    test_labels=te[1].astype(\"float32\")\n",
         "    test_labels=test_labels.reshape(1,len(test_labels))\n",
-        "    return X,Y,test_data,test_labels\n"
+        "    return X,Y.T,test_data,test_labels.T\n"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -99,7 +100,7 @@
         "\n",
         "model = keras.Model(inputs=inputs, outputs=outputs)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -111,22 +112,11 @@
       },
       "source": [
         "X,Y,test_data,test_labels = load_dataset()\n",
-        "#(X, Y), (test_data, test_labels) = keras.datasets.mnist.load_data()\n",
-        "print(X.shape)\n",
-        "print(Y.shape)\n",
         "\n",
-        "X=X.T\n",
-        "Y=Y.T\n",
-        "test_data=test_data.T\n",
-        "test_labels=test_labels.T\n",
-        "\n",
-        "Y=Y.astype(\"float32\")\n",
-        "test_labels=test_labels.astype(\"float32\")\n",
-        "\n",
-        "X= X.reshape(60000, 784).astype(\"float32\") / 255\n",
-        "test_data = test_data.reshape(10000, 784).astype(\"float32\") / 255\n"
+        "X=X.reshape(60000,784)\n",
+        "test_data=test_data.reshape(10000,784)\n"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -148,7 +138,7 @@
         "    metrics=[keras.metrics.CategoricalAccuracy()],\n",
         ")\n"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -156,7 +146,11 @@
       "metadata": {
         "id": "O3fi-5KogPCp",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 381
+        },
+        "outputId": "c4d88aa4-2184-496a-bdfa-ff2fc1e3f978"
       },
       "source": [
         "print(\"Fit model on training data\")\n",
@@ -168,8 +162,36 @@
         "   \n",
         ")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Fit model on training data\n",
+            "Epoch 1/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.6146 - categorical_accuracy: 0.8639\n",
+            "Epoch 2/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.2133 - categorical_accuracy: 0.9370\n",
+            "Epoch 3/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.1600 - categorical_accuracy: 0.9523\n",
+            "Epoch 4/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.1277 - categorical_accuracy: 0.9615\n",
+            "Epoch 5/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.1057 - categorical_accuracy: 0.9685\n",
+            "Epoch 6/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.0896 - categorical_accuracy: 0.9733\n",
+            "Epoch 7/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.0774 - categorical_accuracy: 0.9764\n",
+            "Epoch 8/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.0670 - categorical_accuracy: 0.9800\n",
+            "Epoch 9/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.0592 - categorical_accuracy: 0.9820\n",
+            "Epoch 10/10\n",
+            "938/938 [==============================] - 3s 3ms/step - loss: 0.0526 - categorical_accuracy: 0.9843\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
