--- a/mnist-multilayer.ipynb
+++ b/mnist-multilayer.ipynb
@@ -61,7 +61,7 @@
         "from tensorflow import keras\n",
         "#from tensorflow.keras import layers"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
       "source": [
         "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,7 +149,7 @@
         "    test_labels=test_labels.reshape(1,len(test_labels))\n",
         "    return X,Y.T,test_data,test_labels.T\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +174,7 @@
         "    s = 1/(1+np.exp(-x))\n",
         "    return s"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -219,7 +219,7 @@
         "            plt.imshow(img,cmap='gray_r')\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -229,7 +229,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Returns the number of correct predictions"
+        "Returns the number of correct predictions. Note that the output of our model is in one-hot encoding so it has 10 rows and N columns where is the number of data points whereas test_labels is NOT in one-hot encoding so it has a single row and N columns. For a given column i argmax returns the row index which has the largest value, i.e. the largest likelyhood\n"
       ]
     },
     {
@@ -244,12 +244,15 @@
         "    As=forward_propagation(test_data,biases,weights)\n",
         "    output=As[-1]\n",
         "    count=0\n",
+        "    #the output is in one-hot encoding so it has 10 rows\n",
+        "    # and number of data columns where as test_tables \n",
+        "    # is NOT in one-hot encoding so it has a single row\n",
         "    for i in range(output.shape[1]):\n",
         "        if np.argmax(output[:,i])==test_labels[0,i]:\n",
         "            count=count+1\n",
         "    return count"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +262,7 @@
         "colab_type": "text"
       },
       "source": [
-        "The usual cross Entropy cost"
+        "The usual cross Entropy cost. Unlike the evaluate function both the \"true\" labels and the output of our model are in one-hot encoding"
       ]
     },
     {
@@ -294,7 +297,7 @@
         "    \n",
         "    return cost,count\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +330,7 @@
         "\n",
         "    return biases,weights\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -359,7 +362,7 @@
         "\n",
         "    return As"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -390,7 +393,7 @@
         "    \n",
         "    return gradb,gradw"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +413,7 @@
         "\n",
         "    return biases,weights"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -433,7 +436,7 @@
       "source": [
         ""
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -467,7 +470,7 @@
         "            print(\"test count after iteration %i is %i\" %(i,count_test))\n",
         "    return biases,weights"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +506,7 @@
         "print(A[-1].shape)\n",
         "print(len(A))\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +587,7 @@
       "source": [
         "print_misclassified(test_data,test_labels,biases,weights)\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +621,7 @@
       "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
