--- a/keras-multilayer.ipynb
+++ b/keras-multilayer.ipynb
@@ -37,9 +37,11 @@
         "import random\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "from tensorflow.keras import layers"
+        "from tensorflow.keras import layers\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Dropout, Flatten"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,7 +55,7 @@
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,8 +84,20 @@
         "    test_labels=test_labels.reshape(1,len(test_labels))\n",
         "    return X,Y.T,test_data,test_labels.T\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gvEmfFo74Gqe",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Create Keras Model\n",
+        "\n",
+        "All the models we use are sequential, i.e. the output of one is fed into the input of the next. The \"add\" operation is akind to the push operation on a stack. Below we first add the first layer that takes input of certain shape."
+      ]
     },
     {
       "cell_type": "code",
@@ -93,14 +107,12 @@
         "colab": {}
       },
       "source": [
-        "inputs = keras.Input(shape=(784,), name=\"digits\")\n",
-        "x = layers.Dense(128, activation=\"sigmoid\", name=\"dense_1\")(inputs)\n",
-        "x = layers.Dense(64, activation=\"sigmoid\", name=\"dense_2\")(x)\n",
-        "outputs = layers.Dense(10, activation=\"sigmoid\", name=\"predictions\")(x)\n",
-        "\n",
-        "model = keras.Model(inputs=inputs, outputs=outputs)"
+        "model=Sequential()\n",
+        "model.add(Dense(128,activation=\"sigmoid\",name=\"dense_1\",input_shape=(784,)))\n",
+        "model.add(Dense(64,activation=\"sigmoid\"))\n",
+        "model.add(Dense(10,activation=\"sigmoid\"))\n"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +128,7 @@
         "X=X.reshape(60000,784)\n",
         "test_data=test_data.reshape(10000,784)\n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +150,7 @@
         "    metrics=[keras.metrics.CategoricalAccuracy()],\n",
         ")\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,11 +158,7 @@
       "metadata": {
         "id": "O3fi-5KogPCp",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 381
-        },
-        "outputId": "c4d88aa4-2184-496a-bdfa-ff2fc1e3f978"
+        "colab": {}
       },
       "source": [
         "print(\"Fit model on training data\")\n",
@@ -162,36 +170,36 @@
         "   \n",
         ")"
       ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Fit model on training data\n",
-            "Epoch 1/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.6146 - categorical_accuracy: 0.8639\n",
-            "Epoch 2/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.2133 - categorical_accuracy: 0.9370\n",
-            "Epoch 3/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.1600 - categorical_accuracy: 0.9523\n",
-            "Epoch 4/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.1277 - categorical_accuracy: 0.9615\n",
-            "Epoch 5/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.1057 - categorical_accuracy: 0.9685\n",
-            "Epoch 6/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.0896 - categorical_accuracy: 0.9733\n",
-            "Epoch 7/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.0774 - categorical_accuracy: 0.9764\n",
-            "Epoch 8/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.0670 - categorical_accuracy: 0.9800\n",
-            "Epoch 9/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.0592 - categorical_accuracy: 0.9820\n",
-            "Epoch 10/10\n",
-            "938/938 [==============================] - 3s 3ms/step - loss: 0.0526 - categorical_accuracy: 0.9843\n"
-          ],
-          "name": "stdout"
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BKe136ej359z",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Evaluate on test data\n",
+        "\n",
+        "Note that the test_data is **not** in one_hot encoding."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k9pqSbriuiXb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#model.evaluate(test_data, tf.one_hot(test_labels,depth=10))\n",
+        "\n",
+        "test_labels_one_hot=tf.one_hot(test_labels.flatten(),depth=10)\n",
+        "model.evaluate(test_data,test_labels_one_hot)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
