--- a/ship.ipynb
+++ b/ship.ipynb
@@ -22,6 +22,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/hikmatfarhat-ndu/CSC645/blob/master/kernas-cifar10.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
