--- a/ship.ipynb
+++ b/ship.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "orig_nbformat": 2,
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "name": "683ed82e-fa87-41b0-9cb8-559d40e59574",
+      "display_name": "'Python Interactive'"
     },
     "colab": {
       "name": "ship.ipynb",
@@ -23,6 +23,36 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/hikmatfarhat-ndu/CSC645/blob/master/ship.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "source": [
+        "## Supervised Learning\n",
+        "\n",
+        "This is our first example of **supervised learning**. We are given a set of (image,label) pairs (CIFAR10)  where each image can be of a ship, horse, car...etc and the label is a value between 0 and 10 denoting the type of image. For example an image with an associated label of 8 is that of a ship. "
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
+      "source": [
+        "# Perceptron and Logistical Regression\n",
+        "\n",
+        "In this module we introduce Logistical Regression which can be regarded as the simplest neural network, the Perceptron. Even though the structure of the two is similar (see figure below) the method used for learning is different from the two. If you are interested in the Perceptron learning algorithm and its properties read the pdf lecture introduction. \n",
+        "\n",
+        "As can be seen from the figure below the input is a vector of size _n_ and it feeds a single unit (a neuron or perceptron). To obtain the output we perform the **dot** product between the matrix **W** and the input **x** and the result is fed into some function (usually nonlinear) _f_\n",
+        "\n",
+        "$$\n",
+        "\\begin{align*}\n",
+        "a&=W\\cdot x+b\\\\\n",
+        "y&=f(a)\n",
+        "\\end{align*}\n",
+        "$$\n",
+        "\n",
+        "The input and _f_ are known whereas _W_ and _b_ are parameters to be determined. Our goal is to find the _optimal_ _W_ and _b_ such that output is as close as possible to the label associated with the input.\n",
+        "![title](figures/perceptron.png)"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     },
     {
       "cell_type": "code",
